# learn-llm

./: .gitignore  README.md  learning.md  pyproject.toml
learn_vector_db/: csv_loader.py  embedder.py  imdb_search.py  main.py  similarity.py
rag/: create_embeddings.py  find_resolution.py  resolution_suggester.py
