[project]
name = "learn-vector-db"
version = "0.1.0"
description = ""
authors = [
    {name = "Raj Kumar",email = "raj.kumar@zalando.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "numpy (>=2.4.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
